--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -2,6 +2,7 @@
 body {
     background-color: #f8f9fa;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	margin: 0;
 }
 
 .container-fluid {
